force-app/main/default/objects/KimbleOne__ActivityAssignmentClassCriterion__c/KimbleOne__ActivityAssignmentClassCriterion__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Activity Assignment Class Criterion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Activity Assignment Class Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Assignment Class Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>