force-app/main/default/objects/KimbleOne__ActivityAssignmentClassCriterion__c/fields/KimbleOne__ActivityAssignmentClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignmentClass__c</fullName>
    <label>Activity Assignment Class</label>
    <referenceTo>KimbleOne__ActivityAssignmentClass__c</referenceTo>
    <relationshipLabel>Activity Assignment Class Criteria</relationshipLabel>
    <relationshipName>ActivityAssignmentClassCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>