force-app/main/default/objects/KimbleOne__ActivityAssignmentClassCriterion__c/fields/KimbleOne__Value__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Value__c</fullName>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>